// Configuration for the SSH Relay client helper, used as an ssh(1)
// ProxyCommand.

syntax = "proto3";

import "proto/http.proto";

package hazaelsan.ssh_relay.helper;

option go_package = "github.com/hazaelsan/ssh-relay/helper/proto/config_go_proto";

// Next ID: 6
message Config {
  // Destination SSH host.
  // NOTE: This field is loaded from a flag.
  string host = 1;

  // Destination SSH port.
  // NOTE: This field is loaded from a flag.
  string port = 2;

  // Cookie Server address (and optional :port).
  // If port is unspecified it defaults to 8022.
  string cookie_server_address = 3;

  // Settings for talking to the Cookie Server.
  hazaelsan.ssh_relay.HttpTransport cookie_server_transport = 4;

  // Settings for talking to an SSH Relay.
  // If unspecified, cookie_server_transport will be used.
  hazaelsan.ssh_relay.HttpTransport ssh_relay_transport = 5;
}
